change the kinyarwanda word

--- a/src/locales/kn/global.json
+++ b/src/locales/kn/global.json
@@ -70,7 +70,7 @@
      },
      "homePage":{
           "heroSection":{
-               "heroMessage": "Gurisha, Gura, Kodesha Unamamaze mu Rwanda",
+               "heroMessage": "Gurisha, Gura, Kodesha amamaze mu Rwanda",
                "searchBar":{
                     "search":"Ishakiro...",
                     "category": "Ibyiciro byose",
