added the dashboard initialization

--- a/src/locales/en/global.json
+++ b/src/locales/en/global.json
@@ -63,6 +63,10 @@
                          "link": "/hiring"
                     },
                     {
+                         "title":"Staff",
+                         "link": "/forms/agent-login"
+                    },
+                    {
                          "title":"our Visitors",
                          "link": "/website-visits"
                     }
