--- a/src/locales/kn/global.json
+++ b/src/locales/kn/global.json
@@ -62,6 +62,10 @@
                          "link": "/hiring"
                     },
                     {
+                         "title":"Abokozi",
+                         "link": "/forms/agent-login"
+                    },
+                    {
                          "title":"Abadusura",
                          "link": "/website-visits"
                     }
