--- a/src/locales/fr/global.json
+++ b/src/locales/fr/global.json
@@ -57,16 +57,12 @@
                     {
                          "title":"À propos de nous",
                          "link": "/"
-                    },
-                    {
-                         "title":"Devenez agent",
-                         "link": "/hiring"
-                    },
-                    {
-                         "title":"Staff",
-                         "link": "/forms/agent-login"
                     }
-               ]
+               ],
+               "agentLink": {
+                    "title":"Devenez agent",
+                    "link": "/hiring"
+               } 
           }
      },
      "homePage":{
