--- a/src/locales/fr/global.json
+++ b/src/locales/fr/global.json
@@ -40,11 +40,11 @@
                "links":[
                     {
                          "title":"Centre d'aide",
-                         "link": "/"
+                         "link": "/help-center"
                     },
                     {
                          "title":"Contactez-nous",
-                         "link": "/"
+                         "link": "/contact-us"
                     },
                     {
                          "title":"politique de confidentialité",
@@ -56,7 +56,7 @@
                     },
                     {
                          "title":"À propos de nous",
-                         "link": "/"
+                         "link": "/about"
                     }
                ],
                "agentLink": {
