updated the home page categories

--- a/src/locales/en/global.json
+++ b/src/locales/en/global.json
@@ -67,7 +67,7 @@
      },
      "homePage":{
           "heroSection":{
-               "heroMessage": "Sell, Buy, Rent & Advertise in Rwanda",
+               "heroMessage": "Sell, Buy, Rent and Advertise in Rwanda for Free",
                "searchBar":{
                     "search":"Search Anything...",
                     "category": "All Categories",
