--- a/src/locales/kn/global.json
+++ b/src/locales/kn/global.json
@@ -67,7 +67,7 @@
      },
      "homePage":{
           "heroSection":{
-               "heroMessage": "Gurisha, Gura, Kodesha amamaza mu Rwanda kubuntu",
+               "heroMessage": "Gurisha, Gura, Kodesha amamaza mu Rwanda",
                "searchBar":{
                     "search":"Ishakiro...",
                     "category": "Ibyiciro byose",
